--- a/assets/sass/widgets/dual-heading.scss
+++ b/assets/sass/widgets/dual-heading.scss
@@ -4,19 +4,48 @@
 .ap-dual-heading {
 
     display: block;
-    margin-bottom: 50px;
+    padding-top: 30px;
+    padding-bottom: 30px;
 
-    .ap-dual-heading-title{
-      font-size: 36px;
-      font-weight: 700;
-      text-transform: uppercase;
-      line-height: 48px;
-      margin: 10px 0px;
+    a{
+      text-decoration: none !important;
     }
 
-    .ap-sub-heading {
-      font-size: 16px;
-      display: block;
+    .ap-dual-heading-title{
+      font-weight: 700;
+      text-transform: uppercase;
+      margin: 10px 0px;
+      display: inline-block;
+      vertical-align: middle;
+    }
+
+    .ap-sub-heading-dual {
+      display: inline-block;
+      vertical-align: middle;
+    }
+
+    .ap-line-align-left{
+      float:left;
+    }
+    .ap-line-align-right{
+      float:right;
+    }
+
+    .ap-line-align-bottom{
+      line-height: 0;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      margin-top: 5px;
+    }
+
+    .line:after{
+      content: "";
+      background-color: #1abc9c;
+      height: 2px;
+      width: 50px;
+      display: inline-block;
+      vertical-align: middle;
     }
 
   }
