--- a/assets/sass/widgets/call-to-action.scss
+++ b/assets/sass/widgets/call-to-action.scss
@@ -46,6 +46,10 @@
     .ap-cta-button-icon-right {
       margin-right: 5px;
     }
+
+    .ap-cta-button-text{
+      vertical-align: middle;
+    }
     
   }
 
