--- a/assets/css/widgets/testimonial.css
+++ b/assets/css/widgets/testimonial.css
@@ -2,107 +2,172 @@
 /* Addon Pack Testimonial Styles
 /* -------------------------------- */
 .ap-testimonial-wrapper {
-  padding: 1.5rem; }
-
-/* Default Style */
-.ap-testimonial-reviewer {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-  align-items: center;
-  -ms-flex-align: center;
-  -webkit-box-flex: 1;
-  -webkit-flex: 1;
-  -ms-flex: 1;
-  flex: 1; }
-
-.ap-testimonial-image-circle {
-  -webkit-box-flex: 0;
-  -webkit-flex: 0 0 70px;
-  -ms-flex: 0 0 70px;
-  flex: 0 0 70px;
-  max-width: 70px;
-  height: 70px; }
-
-.ap-testimonial-image-circle img {
-  width: 100%;
-  height: 100%;
-  border-radius: 50%;
-  -o-object-fit: cover;
-  object-fit: cover; }
-
-.ap-testimonial-image-square {
-  -webkit-box-flex: 0;
-  -webkit-flex: 0 0 70px;
-  -ms-flex: 0 0 70px;
-  flex: 0 0 70px;
-  max-width: 70px;
-  height: 70px; }
-
-.ap-testimonial-image-square img {
-  width: 100%;
-  height: 100%;
-  border-radius: 2%;
-  -o-object-fit: cover;
-  object-fit: cover; }
-
-.ap-testimonial-reviewer-info {
-  margin-left: 15px; }
-
-.ap-testimonial-reviewer-info .ap-testimonial-name {
-  margin-bottom: .3rem;
-  font-size: 30px;
-  font-weight: 600;
-  color: #2f2f2f;
-  text-transform: capitalize;
-  line-height: 20px; }
-
-.ap-testimonial-reviewer-info .ap-testimonial-designation {
-  font-size: 20px;
-  color: #5d7aa7; }
-
-.ap-testimonial-reviewer-info .ap-testimonial-rating {
-  list-style: none !important;
-  display: flex;
-  padding: 0px;
-  margin: 0px; }
-
-.ap-testimonial-default-style .ap-testimonial-content {
-  box-shadow: 5px 5px 6px rgba(0, 0, 0, 0.06);
-  padding: 20px 20px 20px 20px;
-  margin-bottom: 20px;
-  overflow: hidden;
-  position: relative;
-  font-size: 15px;
-  color: #918686;
-  line-height: 25px; }
-
-.ap-testimonial-classic-style .ap-testimonial-content {
-  padding: 20px 22px;
-  background: #1f487e;
-  font-size: 15px;
-  color: #fff;
-  line-height: 25px;
-  margin: 0;
-  position: relative;
-  margin-top: 20px; }
-
-.ap-testimonial-classic-style .ap-testimonial-content:before,
-.ap-testimonial-classic-style .ap-testimonial-content:after {
-  content: "";
-  border-width: 18px 0 0 18px;
-  border-style: solid;
-  border-color: #5d7aa7 transparent transparent;
-  position: absolute;
-  bottom: -18px;
-  left: 0; }
-
-.ap-testimonial-classic-style .ap-testimonial-content:after {
-  border-width: 18px 18px 0 0;
-  left: auto;
-  right: 0; }
+  display: block; }
+  .ap-testimonial-wrapper .ap-testimonial-main-container {
+    background: #ffffff;
+    -moz-box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.1);
+    -webkit-box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.1);
+    box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.1);
+    padding: 15px;
+    position: relative;
+    -moz-transition: all .5s ease-in-out 0s;
+    -webkit-transition: all .5s ease-in-out 0s;
+    -o-transition: all .5s ease-in-out 0s;
+    -ms-transition: all .5s ease-in-out 0s;
+    transition: all .5s ease-in-out 0s;
+    -webkit-transform: scale(1);
+    -o-transform: scale(1);
+    -ms-transform: scale(1);
+    -moz-transform: scale(1);
+    transform: scale(1); }
+  .ap-testimonial-wrapper .ap-testimonial-main-container::after {
+    border-left: 50px solid rgba(0, 0, 0, 0);
+    border-top: 44px solid #1abc9c;
+    content: "";
+    position: absolute;
+    right: 0;
+    top: 0; }
+  .ap-testimonial-wrapper .ap-testimonial-default-style .ap-reviewer-info .ap-testimonial-name {
+    font-size: 20px;
+    font-weight: 600;
+    margin: 15px 0px 5px 0px;
+    color: #1abc9c; }
+  .ap-testimonial-wrapper .ap-testimonial-default-style .ap-reviewer-info .ap-testimonial-designation {
+    margin: 0px; }
+  .ap-testimonial-wrapper .ap-testimonial-default-style .ap-reviewer-info .ap-testimonial-designation .ap-testimonial-company {
+    color: #0073aa; }
+  .ap-testimonial-wrapper .ap-testimonial-default-style .ap-reviewer-content .ap-reviewer-content-details {
+    line-height: 1.7;
+    padding: 0px 0px 12px 0px;
+    margin: 5px 0px;
+    border-bottom: 1px solid #1abc9c;
+    position: relative; }
+    .ap-testimonial-wrapper .ap-testimonial-default-style .ap-reviewer-content .ap-reviewer-content-details .ap-quotation-icon i {
+      color: rgba(0, 0, 0, 0.1);
+      font-size: 20px;
+      padding: 0px 10px; }
+  .ap-testimonial-wrapper .ap-testimonial-default-style .ap-reviewer-content .ap-reviewer-content-details::before {
+    left: 0;
+    bottom: -8px;
+    background: #1abc9c;
+    border: 3px solid #ffffff;
+    -moz-border-radius: 100px;
+    -webkit-border-radius: 100px;
+    border-radius: 100px;
+    content: "";
+    height: 15px;
+    position: absolute;
+    width: 15px; }
+  .ap-testimonial-wrapper .ap-testimonial-default-style .ap-reviewer-rating {
+    display: inline-block;
+    margin: 1px auto;
+    padding: 0;
+    list-style: none; }
+    .ap-testimonial-wrapper .ap-testimonial-default-style .ap-reviewer-rating li {
+      display: inline-block; }
+      .ap-testimonial-wrapper .ap-testimonial-default-style .ap-reviewer-rating li i {
+        color: #ff8800;
+        font-size: 16px; }
+  .ap-testimonial-wrapper .ap-testimonial-default-style .ap-reviewer-thumbnail {
+    bottom: -40px;
+    position: absolute;
+    right: 20px;
+    -moz-border-radius: 100%;
+    -webkit-border-radius: 100%;
+    border-radius: 100%; }
+    .ap-testimonial-wrapper .ap-testimonial-default-style .ap-reviewer-thumbnail img {
+      line-height: normal;
+      max-width: 100%;
+      vertical-align: middle;
+      width: 100px;
+      height: 100px;
+      border: solid 3px #fff;
+      padding: 2px;
+      -moz-box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.1);
+      -webkit-box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.1);
+      box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.1); }
+  .ap-testimonial-wrapper .ap-testimonial-default-style .ap-testimonial-image-circle img {
+    -moz-border-radius: 100%;
+    -webkit-border-radius: 100%;
+    border-radius: 100%; }
+  .ap-testimonial-wrapper .ap-testimonial-classic-style .ap-reviewer-info .ap-testimonial-name {
+    font-size: 20px;
+    font-weight: 600;
+    margin: 15px 0px 5px 0px;
+    color: #1abc9c; }
+  .ap-testimonial-wrapper .ap-testimonial-classic-style .ap-reviewer-info .ap-testimonial-designation {
+    margin: 0px; }
+  .ap-testimonial-wrapper .ap-testimonial-classic-style .ap-reviewer-info .ap-testimonial-designation .ap-testimonial-company {
+    color: #0073aa; }
+  .ap-testimonial-wrapper .ap-testimonial-classic-style .ap-reviewer-rating {
+    display: inline-block;
+    margin: 1px auto;
+    padding: 0;
+    list-style: none; }
+    .ap-testimonial-wrapper .ap-testimonial-classic-style .ap-reviewer-rating li {
+      display: inline-block; }
+      .ap-testimonial-wrapper .ap-testimonial-classic-style .ap-reviewer-rating li i {
+        color: #ff8800;
+        font-size: 16px; }
+  .ap-testimonial-wrapper .ap-testimonial-classic-style .ap-reviewer-thumbnail {
+    -moz-border-radius: 100%;
+    -webkit-border-radius: 100%;
+    border-radius: 100%; }
+    .ap-testimonial-wrapper .ap-testimonial-classic-style .ap-reviewer-thumbnail img {
+      line-height: normal;
+      max-width: 100%;
+      vertical-align: middle;
+      width: 100px;
+      height: 100px;
+      border: solid 3px #fff;
+      padding: 2px;
+      -moz-box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.1);
+      -webkit-box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.1);
+      box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.1); }
+  .ap-testimonial-wrapper .ap-testimonial-classic-style .ap-testimonial-image-circle img {
+    -moz-border-radius: 100%;
+    -webkit-border-radius: 100%;
+    border-radius: 100%; }
+  .ap-testimonial-wrapper .ap-testimonial-classic-style .ap-reviewer-thumbnail {
+    -moz-border-radius: 100%;
+    -webkit-border-radius: 100%;
+    border-radius: 100%; }
+    .ap-testimonial-wrapper .ap-testimonial-classic-style .ap-reviewer-thumbnail img {
+      line-height: normal;
+      max-width: 100%;
+      vertical-align: middle;
+      width: 100px;
+      height: 100px;
+      border: solid 3px #fff;
+      padding: 2px;
+      -moz-box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.1);
+      -webkit-box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.1);
+      box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.1); }
+  .ap-testimonial-wrapper .ap-testimonial-classic-style .ap-classic-reviewer-details {
+    display: flex;
+    justify-content: space-around; }
+  .ap-testimonial-wrapper .ap-testimonial-classic-style .ap-reviewer-info .ap-reviewer-content .ap-reviewer-content-details {
+    line-height: 1.7;
+    padding: 7px 0px 0px 0px;
+    margin: 5px 0px;
+    border-top: 1px solid #1abc9c !important;
+    border-bottom: 0px none;
+    position: relative; }
+    .ap-testimonial-wrapper .ap-testimonial-classic-style .ap-reviewer-info .ap-reviewer-content .ap-reviewer-content-details .ap-quotation-icon i {
+      color: rgba(0, 0, 0, 0.1);
+      font-size: 20px;
+      padding: 0px 10px; }
+  .ap-testimonial-wrapper .ap-testimonial-classic-style .ap-reviewer-info .ap-reviewer-content .ap-reviewer-content-details::before {
+    left: 0;
+    top: -8px;
+    background: #1abc9c;
+    border: 3px solid #ffffff;
+    -moz-border-radius: 100px;
+    -webkit-border-radius: 100px;
+    border-radius: 100px;
+    content: "";
+    height: 15px;
+    position: absolute;
+    width: 15px; }
 
 /*# sourceMappingURL=testimonial.css.map */
