--- a/assets/sass/widgets/testimonial.scss
+++ b/assets/sass/widgets/testimonial.scss
@@ -212,7 +212,7 @@
                     line-height: 1.7;
                     padding: 7px 0px 0px 0px;
                     margin: 5px 0px;
-                    border-top: 1px solid #1abc9c !important;
+                    border-top: 1px solid #1abc9c;
                     border-bottom: 0px none;
                     position: relative;
                     .ap-quotation-icon i{
