--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -321,49 +321,40 @@
   border-color: #2a384c;
   border-radius: 15px;
   background-color: #fff;
-  -webkit-box-shadow: 0 4px 10px 0 rgba(55, 94, 246, 0.4);
-  box-shadow: 0 4px 10px 0 rgba(55, 94, 246, 0.4);
-  border-top: 3px solid #1abc9c;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -webkit-flex-direction: column;
-  -ms-flex-direction: column;
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-  -ms-flex-align: center;
-  align-items: center;
-  -webkit-box-pack: center;
-  -webkit-justify-content: center;
-  -ms-flex-pack: center;
-  justify-content: center; }
-  .ap-infobox-wrapper .ap-infobox-design-1 .ap-infobox-details h4 {
-    font-size: 24px;
-    font-weight: 700;
-    margin: 0 0  10px;
-    text-transform: capitalize; }
-  .ap-infobox-wrapper .ap-infobox-design-1 .ap-infobox-details p {
-    font-size: 18px;
-    line-height: 26px;
-    margin: 0;
-    font-weight: 500; }
+  -webkit-box-shadow: 0 1px 10px 0 rgba(55, 94, 246, 0.1);
+  box-shadow: 0 1px 10px 0 rgba(55, 94, 246, 0.1);
+  border-top: 3px solid #1abc9c; }
+  .ap-infobox-wrapper .ap-infobox-design-1 .ap-infobox-details {
+    text-align: center; }
+    .ap-infobox-wrapper .ap-infobox-design-1 .ap-infobox-details h4 {
+      font-size: 24px;
+      font-weight: 700;
+      margin: 0 0  10px;
+      text-transform: capitalize; }
+    .ap-infobox-wrapper .ap-infobox-design-1 .ap-infobox-details p {
+      font-size: 18px;
+      line-height: 26px;
+      margin: 0;
+      font-weight: 500; }
+    .ap-infobox-wrapper .ap-infobox-design-1 .ap-infobox-details a {
+      font-size: 18px;
+      color: #4a35f1; }
+      .ap-infobox-wrapper .ap-infobox-design-1 .ap-infobox-details a i {
+        font-size: 14px; }
   .ap-infobox-wrapper .ap-infobox-design-1 .ap-infobox-thumb {
-    margin-bottom: 15px; }
-  .ap-infobox-wrapper .ap-infobox-design-1 .ap-infobox-thumb img {
-    -webkit-animation: pulse 400ms ease-in-out;
-    animation: pulse 400ms ease-in-out; }
-  .ap-infobox-wrapper .ap-infobox-design-1 .ap-infobox-thumb i {
-    -webkit-animation: pulse 400ms ease-in-out;
-    animation: pulse 400ms ease-in-out;
-    font-size: 40px;
-    color: #4a35f1; }
-  .ap-infobox-wrapper .ap-infobox-design-1 .ap-infobox-link a {
-    font-size: 18px;
-    color: #4a35f1; }
-    .ap-infobox-wrapper .ap-infobox-design-1 .ap-infobox-link a i {
-      padding-left: 5px;
-      font-size: 20px;
-      margin-top: 12px;
-      position: absolute; }
+    margin-bottom: 15px;
+    text-align: center; }
+    .ap-infobox-wrapper .ap-infobox-design-1 .ap-infobox-thumb img {
+      -webkit-animation: pulse 400ms ease-in-out;
+      animation: pulse 400ms ease-in-out; }
+    .ap-infobox-wrapper .ap-infobox-design-1 .ap-infobox-thumb i {
+      -webkit-animation: pulse 400ms ease-in-out;
+      animation: pulse 400ms ease-in-out;
+      font-size: 40px;
+      color: #4a35f1; }
+.ap-infobox-wrapper .ap-infobox-design-1:hover {
+  -webkit-box-shadow: 0 4px 10px 0 rgba(55, 94, 246, 0.4);
+  box-shadow: 0 4px 10px 0 rgba(154, 159, 180, 0.4); }
 .ap-infobox-wrapper .ap-infobox-design-2 {
   display: flex;
   display: -webkit-box;
@@ -375,48 +366,37 @@
   z-index: 1;
   padding: 25px 15px;
   border-radius: 10px;
-  filter: drop-shadow(0 0 20px rgba(0, 0, 0, 0.07));
   background-color: #ffffff;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -webkit-box-align: left;
-  -webkit-align-items: left;
-  -ms-flex-align: left;
-  align-items: left;
-  -webkit-box-pack: left;
-  -webkit-justify-content: left;
-  -ms-flex-pack: left;
-  justify-content: left; }
-  .ap-infobox-wrapper .ap-infobox-design-2 .ap-infobox-details h4 {
-    font-size: 24px;
-    font-weight: 700;
-    margin: 0 0  12px;
-    text-transform: capitalize;
+  -webkit-box-shadow: 0 4px 10px 0 rgba(55, 94, 246, 0.4);
+  box-shadow: 0 4px 10px 0 rgba(154, 159, 180, 0.4); }
+  .ap-infobox-wrapper .ap-infobox-design-2 .ap-infobox-details {
     text-align: left; }
-  .ap-infobox-wrapper .ap-infobox-design-2 .ap-infobox-details p {
-    font-size: 18px;
-    line-height: 26px;
-    margin: 0;
-    font-weight: 500;
-    text-align: left; }
+    .ap-infobox-wrapper .ap-infobox-design-2 .ap-infobox-details h4 {
+      font-size: 24px;
+      font-weight: 700;
+      margin: 0 0  12px;
+      text-transform: capitalize; }
+    .ap-infobox-wrapper .ap-infobox-design-2 .ap-infobox-details p {
+      font-size: 18px;
+      line-height: 26px;
+      margin: 0;
+      font-weight: 500; }
+    .ap-infobox-wrapper .ap-infobox-design-2 .ap-infobox-details a {
+      font-size: 18px;
+      color: #4a35f1; }
+      .ap-infobox-wrapper .ap-infobox-design-2 .ap-infobox-details a i {
+        font-size: 14px; }
   .ap-infobox-wrapper .ap-infobox-design-2 .ap-infobox-thumb {
-    margin-bottom: 15px; }
-  .ap-infobox-wrapper .ap-infobox-design-2 .ap-infobox-thumb img {
-    -webkit-animation: pulse 400ms ease-in-out;
-    animation: pulse 400ms ease-in-out; }
-  .ap-infobox-wrapper .ap-infobox-design-2 .ap-infobox-thumb i {
-    -webkit-animation: pulse 400ms ease-in-out;
-    animation: pulse 400ms ease-in-out;
-    font-size: 40px;
-    color: #4a35f1; }
-  .ap-infobox-wrapper .ap-infobox-design-2 .ap-infobox-link a {
-    font-size: 18px;
-    color: #4a35f1; }
-    .ap-infobox-wrapper .ap-infobox-design-2 .ap-infobox-link a i {
-      padding-left: 5px;
-      font-size: 14px;
-      margin-top: 16px;
-      position: absolute; }
+    margin-bottom: 15px;
+    text-align: left; }
+    .ap-infobox-wrapper .ap-infobox-design-2 .ap-infobox-thumb img {
+      -webkit-animation: pulse 400ms ease-in-out;
+      animation: pulse 400ms ease-in-out; }
+    .ap-infobox-wrapper .ap-infobox-design-2 .ap-infobox-thumb i {
+      -webkit-animation: pulse 400ms ease-in-out;
+      animation: pulse 400ms ease-in-out;
+      font-size: 40px;
+      color: #4a35f1; }
 .ap-infobox-wrapper .ap-infobox-design-2:before {
   content: '';
   position: absolute;
@@ -441,11 +421,7 @@
   background-color: rgba(232, 5, 102, 0.9); }
 .ap-infobox-wrapper .ap-infobox-design-2:hover .ap-infobox-thumb i {
   color: #ffffff; }
-.ap-infobox-wrapper .ap-infobox-design-2:hover .ap-infobox-details h4 {
-  color: #ffffff; }
-.ap-infobox-wrapper .ap-infobox-design-2:hover .ap-infobox-details p {
-  color: #ffffff; }
-.ap-infobox-wrapper .ap-infobox-design-2:hover .ap-infobox-link a {
+.ap-infobox-wrapper .ap-infobox-design-2:hover .ap-infobox-details h4, .ap-infobox-wrapper .ap-infobox-design-2:hover .ap-infobox-details p, .ap-infobox-wrapper .ap-infobox-design-2:hover .ap-infobox-details a {
   color: #ffffff; }
 
 /*# sourceMappingURL=main.css.map */
