--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -423,5 +423,249 @@
   color: #ffffff; }
 .ap-infobox-wrapper .ap-infobox-design-2:hover .ap-infobox-details h4, .ap-infobox-wrapper .ap-infobox-design-2:hover .ap-infobox-details p, .ap-infobox-wrapper .ap-infobox-design-2:hover .ap-infobox-details a {
   color: #ffffff; }
+.ap-infobox-wrapper .ap-infobox-disable {
+  display: none; }
+
+/*--------------------------------*/
+/* Addon Pack Card Styles
+/*--------------------------------*/
+.ap-card-design-1 .ap-card {
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  min-width: 0;
+  word-wrap: break-word;
+  background-color: #fff;
+  background-clip: border-box;
+  border: 1px solid rgba(0, 0, 0, 0.125);
+  border-radius: .25rem; }
+  .ap-card-design-1 .ap-card .ap-card-img {
+    position: relative;
+    margin: 0;
+    width: 100%;
+    display: inherit;
+    height: 250px; }
+    .ap-card-design-1 .ap-card .ap-card-img .ap-card-badge {
+      position: absolute;
+      max-width: 100%;
+      border-radius: 50px;
+      background-color: #fff;
+      font-size: 12px;
+      padding: 6px 15px;
+      font-weight: 600; }
+    .ap-card-design-1 .ap-card .ap-card-img .ap-card-badge-top-right {
+      top: 15px;
+      right: 15px; }
+    .ap-card-design-1 .ap-card .ap-card-img .ap-card-badge-top-left {
+      top: 15px;
+      left: 15px; }
+    .ap-card-design-1 .ap-card .ap-card-img .ap-card-badge-bottom-right {
+      bottom: 15px;
+      right: 15px; }
+    .ap-card-design-1 .ap-card .ap-card-img .ap-card-badge-bottom-left {
+      bottom: 15px;
+      left: 15px; }
+    .ap-card-design-1 .ap-card .ap-card-img img {
+      border-top-left-radius: calc(0.25rem - 1px);
+      border-top-right-radius: calc(0.25rem - 1px);
+      flex-shrink: 0;
+      width: 100%;
+      height: 100%; }
+  .ap-card-design-1 .ap-card .ap-card-body {
+    padding: 1.25rem; }
+    .ap-card-design-1 .ap-card .ap-card-body h4 {
+      font-size: 24px;
+      font-weight: 500;
+      margin: 0px;
+      padding: 0px; }
+    .ap-card-design-1 .ap-card .ap-card-body .ap-card-description {
+      margin: 10px 0px 30px 0px;
+      color: #616161;
+      font-size: 20px;
+      line-height: 1.5; }
+    .ap-card-design-1 .ap-card .ap-card-body .ap-card-button:hover {
+      color: #ffffff;
+      background-color: rgba(232, 5, 102, 0.9); }
+    .ap-card-design-1 .ap-card .ap-card-body .ap-card-button {
+      padding: 6px 25px;
+      background-color: #555555;
+      border-radius: 2px; }
+      .ap-card-design-1 .ap-card .ap-card-body .ap-card-button .ap-card-btn-text {
+        color: #ffffff;
+        font-weight: 500;
+        font-size: 18px; }
+      .ap-card-design-1 .ap-card .ap-card-body .ap-card-button .ap-card-btn-icon {
+        margin-left: 5px;
+        color: #ffffff;
+        font-size: 16px; }
+    .ap-card-design-1 .ap-card .ap-card-body .ap-card-button:hover {
+      background: rgba(232, 5, 102, 0.9);
+      border: 2px solid rgba(232, 5, 102, 0.9);
+      border: none; }
+      .ap-card-design-1 .ap-card .ap-card-body .ap-card-button:hover .ap-card-btn-text {
+        color: #ffffff; }
+      .ap-card-design-1 .ap-card .ap-card-body .ap-card-button:hover .ap-card-btn-icon {
+        color: #ffffff; }
+
+.ap-card-design-2 .ap-card {
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  min-width: 0;
+  word-wrap: break-word;
+  background-color: #fff;
+  border-radius: .25rem;
+  box-shadow: 0 0.2rem 3rem rgba(30, 30, 30, 0.1); }
+  .ap-card-design-2 .ap-card .ap-card-img {
+    position: relative;
+    margin-top: -1.25rem;
+    margin-right: 4%;
+    margin-left: 4%;
+    display: inherit;
+    height: 250px;
+    -webkit-box-shadow: 0 5px 11px 0 rgba(0, 0, 0, 0.18), 0 4px 15px 0 rgba(0, 0, 0, 0.15);
+    box-shadow: 0 5px 11px 0 rgba(0, 0, 0, 0.18), 0 4px 15px 0 rgba(0, 0, 0, 0.15); }
+    .ap-card-design-2 .ap-card .ap-card-img .ap-card-badge {
+      position: absolute;
+      max-width: 100%;
+      border-radius: 50px;
+      background-color: #fff;
+      font-size: 12px;
+      padding: 6px 15px;
+      font-weight: 600; }
+    .ap-card-design-2 .ap-card .ap-card-img .ap-card-badge-top-right {
+      top: 15px;
+      right: 15px; }
+    .ap-card-design-2 .ap-card .ap-card-img .ap-card-badge-top-left {
+      top: 15px;
+      left: 15px; }
+    .ap-card-design-2 .ap-card .ap-card-img .ap-card-badge-bottom-right {
+      bottom: 15px;
+      right: 15px; }
+    .ap-card-design-2 .ap-card .ap-card-img .ap-card-badge-bottom-left {
+      bottom: 15px;
+      left: 15px; }
+    .ap-card-design-2 .ap-card .ap-card-img img {
+      border-top-left-radius: calc(0.25rem - 1px);
+      border-top-right-radius: calc(0.25rem - 1px);
+      flex-shrink: 0;
+      width: 100%;
+      height: 100%; }
+  .ap-card-design-2 .ap-card .ap-card-body {
+    padding: 1.25rem;
+    text-align: center; }
+    .ap-card-design-2 .ap-card .ap-card-body h4 {
+      font-size: 24px;
+      font-weight: 500;
+      margin: 0px;
+      padding: 0px; }
+    .ap-card-design-2 .ap-card .ap-card-body .ap-card-description {
+      margin: 10px 0px 30px 0px;
+      color: #616161;
+      font-size: 20px;
+      line-height: 1.5; }
+    .ap-card-design-2 .ap-card .ap-card-body .ap-card-button {
+      padding: 6px 25px;
+      border: 2px solid #1abc9c;
+      border-color: #1abc9c;
+      border-radius: 2px; }
+      .ap-card-design-2 .ap-card .ap-card-body .ap-card-button .ap-card-btn-text {
+        color: #1abc9c;
+        font-weight: 500;
+        font-size: 18px; }
+      .ap-card-design-2 .ap-card .ap-card-body .ap-card-button .ap-card-btn-icon {
+        margin-left: 5px;
+        color: #1abc9c;
+        font-size: 16px; }
+    .ap-card-design-2 .ap-card .ap-card-body .ap-card-button:hover {
+      background: rgba(232, 5, 102, 0.9);
+      border: 2px solid rgba(232, 5, 102, 0.9);
+      border: none; }
+      .ap-card-design-2 .ap-card .ap-card-body .ap-card-button:hover .ap-card-btn-text {
+        color: #ffffff; }
+      .ap-card-design-2 .ap-card .ap-card-body .ap-card-button:hover .ap-card-btn-icon {
+        color: #ffffff; }
+
+.ap-card-design-3 .ap-card {
+  display: -ms-flexbox;
+  display: flex;
+  background-color: #fff;
+  background-clip: border-box;
+  border: 1px solid rgba(0, 0, 0, 0.125);
+  box-shadow: 0 0.2rem 2.8rem rgba(36, 36, 36, 0.1);
+  border-radius: .25rem; }
+  .ap-card-design-3 .ap-card .ap-card-img {
+    position: relative;
+    margin: 0;
+    width: 100%;
+    display: inherit;
+    flex: 0 0 40%;
+    max-width: 40%; }
+    .ap-card-design-3 .ap-card .ap-card-img .ap-card-badge {
+      position: absolute;
+      max-width: 100%;
+      border-radius: 50px;
+      background-color: #fff;
+      font-size: 12px;
+      padding: 6px 15px;
+      font-weight: 600; }
+    .ap-card-design-3 .ap-card .ap-card-img .ap-card-badge-top-right {
+      top: 15px;
+      right: 15px; }
+    .ap-card-design-3 .ap-card .ap-card-img .ap-card-badge-top-left {
+      top: 15px;
+      left: 15px; }
+    .ap-card-design-3 .ap-card .ap-card-img .ap-card-badge-bottom-right {
+      bottom: 15px;
+      right: 15px; }
+    .ap-card-design-3 .ap-card .ap-card-img .ap-card-badge-bottom-left {
+      bottom: 15px;
+      left: 15px; }
+    .ap-card-design-3 .ap-card .ap-card-img img {
+      border-top-left-radius: calc(0.25rem - 1px);
+      border-bottom-left-radius: calc(0.25rem - 1px);
+      flex-shrink: 0;
+      width: 100%;
+      height: 100%;
+      object-fit: cover; }
+  .ap-card-design-3 .ap-card .ap-card-body {
+    padding: 1.25rem;
+    flex: 0 0 calc(100% - 40%);
+    max-width: calc(100% - 40%); }
+    .ap-card-design-3 .ap-card .ap-card-body h4 {
+      font-size: 30px;
+      font-weight: 700;
+      margin: 0px;
+      padding: 0px; }
+    .ap-card-design-3 .ap-card .ap-card-body .ap-card-description {
+      margin: 10px 0px 30px 0px;
+      color: #616161;
+      font-size: 20px;
+      line-height: 1.5; }
+    .ap-card-design-3 .ap-card .ap-card-body .ap-card-button:hover {
+      color: #ffffff;
+      background-color: rgba(232, 5, 102, 0.9); }
+    .ap-card-design-3 .ap-card .ap-card-body .ap-card-button {
+      padding: 6px 25px;
+      background-color: #555555;
+      border-radius: 2px; }
+      .ap-card-design-3 .ap-card .ap-card-body .ap-card-button .ap-card-btn-text {
+        color: #ffffff;
+        font-weight: 500;
+        font-size: 18px; }
+      .ap-card-design-3 .ap-card .ap-card-body .ap-card-button .ap-card-btn-icon {
+        margin-left: 5px;
+        color: #ffffff;
+        font-size: 16px; }
+    .ap-card-design-3 .ap-card .ap-card-body .ap-card-button:hover {
+      background: rgba(232, 5, 102, 0.9);
+      border: 2px solid rgba(232, 5, 102, 0.9);
+      border: none; }
+      .ap-card-design-3 .ap-card .ap-card-body .ap-card-button:hover .ap-card-btn-text {
+        color: #ffffff; }
+      .ap-card-design-3 .ap-card .ap-card-body .ap-card-button:hover .ap-card-btn-icon {
+        color: #ffffff; }
 
 /*# sourceMappingURL=main.css.map */
