Updated all created widgets design and css

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1,3 +1,34 @@
+/*--------------------------------------------------------------
+# Fonts
+--------------------------------------------------------------*/
+
+/* ==========================================
+font-family: 'Poppins', sans-serif;
+font-family: 'butlerbold', sans-serif;
+=============================================*/
+
+/*--------------------------------------------------------------
+# Table of content
+--------------------------------------------------------------*/
+/* ==================================
+
+==================================
+1. ELEMENTS related
+==================================
+  2.1 
+  2.2 
+  2.3 
+  2.4 
+  2.5 
+
+
+========================================*/
+
+
+/*--------------------------------------------------------------
+# Elements css
+--------------------------------------------------------------*/
+
 @import "media-query";
 
 @import "widgets/dual-heading";
