--- a/assets/css/widgets/call-to-action.css
+++ b/assets/css/widgets/call-to-action.css
@@ -1,59 +1,61 @@
 /*--------------------------------*/
 /* Addon Pack Call To Action Styles
 /*--------------------------------*/
-.ap-cta-wrapper {
-  background-color: #353535;
-  width: 100%;
-  height: auto;
-  display: block;
-  padding: 28px;
-  font-size: 16px;
-  color: #4d4d4d;
-  line-height: 27px;
-  margin: 0 auto; }
-  .ap-cta-wrapper .ap-cta-title {
-    color: #fff;
-    font-size: 36px;
-    font-weight: 600;
-    line-height: 36px;
-    margin-bottom: 12px;
-    text-transform: capitalize;
-    font-style: normal; }
-  .ap-cta-wrapper .ap-cta-content {
+.elementor-widget-ap-cta {
+  background-color: #353535; }
+  .elementor-widget-ap-cta .ap-cta-wrapper {
+    width: 100%;
+    height: auto;
+    display: block;
+    padding: 28px;
     font-size: 16px;
-    color: #fff; }
-  .ap-cta-wrapper .ap-cta-button {
-    text-align: center;
-    text-decoration: none !important;
-    text-transform: uppercase;
-    font-weight: 500;
-    border-radius: 2px;
-    position: relative;
-    display: inline-block;
-    background: #f9f9f9;
-    font-size: 16px;
-    margin-right: 10px;
-    margin-top: 10px;
-    z-index: 0;
-    overflow: hidden; }
-    .ap-cta-wrapper .ap-cta-button .ap-cta-button-icon-right {
-      margin-right: 5px; }
-    .ap-cta-wrapper .ap-cta-button .ap-cta-button-text {
-      vertical-align: middle; }
-  .ap-cta-wrapper .ap-cta-button-xs {
-    padding: 4px 8px;
-    font-size: 12px; }
-  .ap-cta-wrapper .ap-cta-button-sm {
-    padding: 6px 10px;
-    font-size: 14px; }
-  .ap-cta-wrapper .ap-cta-button-md {
-    padding: 8px 14px;
-    font-size: 16px; }
-  .ap-cta-wrapper .ap-cta-button-lg {
-    padding: 10px 16px;
-    font-size: 18px; }
-  .ap-cta-wrapper .ap-cta-button-xl {
-    padding: 12px 18px;
-    font-size: 24px; }
+    line-height: 1.5;
+    margin: 0 auto; }
+    .elementor-widget-ap-cta .ap-cta-wrapper .ap-cta-title {
+      color: #fff;
+      font-size: 36px;
+      font-weight: 600;
+      line-height: 1.2;
+      margin-bottom: 12px;
+      text-transform: capitalize;
+      font-style: normal;
+      font-family: 'Poppins', sans-serif; }
+    .elementor-widget-ap-cta .ap-cta-wrapper .ap-cta-content {
+      font-size: 16px;
+      color: #fff;
+      font-family: 'Poppins', sans-serif; }
+    .elementor-widget-ap-cta .ap-cta-wrapper .ap-cta-button {
+      text-align: center;
+      text-decoration: none !important;
+      text-transform: uppercase;
+      font-weight: 500;
+      border-radius: 2px;
+      position: relative;
+      display: inline-block;
+      background: #f9f9f9;
+      font-size: 16px;
+      margin-right: 10px;
+      margin-top: 20px;
+      z-index: 0;
+      overflow: hidden; }
+      .elementor-widget-ap-cta .ap-cta-wrapper .ap-cta-button .ap-cta-button-icon-right {
+        margin-right: 5px; }
+      .elementor-widget-ap-cta .ap-cta-wrapper .ap-cta-button .ap-cta-button-text {
+        vertical-align: middle; }
+    .elementor-widget-ap-cta .ap-cta-wrapper .ap-cta-button-xs {
+      padding: 4px 8px;
+      font-size: 12px; }
+    .elementor-widget-ap-cta .ap-cta-wrapper .ap-cta-button-sm {
+      padding: 6px 10px;
+      font-size: 14px; }
+    .elementor-widget-ap-cta .ap-cta-wrapper .ap-cta-button-md {
+      padding: 8px 14px;
+      font-size: 16px; }
+    .elementor-widget-ap-cta .ap-cta-wrapper .ap-cta-button-lg {
+      padding: 10px 16px;
+      font-size: 18px; }
+    .elementor-widget-ap-cta .ap-cta-wrapper .ap-cta-button-xl {
+      padding: 12px 18px;
+      font-size: 24px; }
 
 /*# sourceMappingURL=call-to-action.css.map */
