--- a/assets/css/widgets/infobox.css
+++ b/assets/css/widgets/infobox.css
@@ -1,123 +1,126 @@
 /* -------------------------------- */
 /* Addon Pack Info Box Styles
 /* -------------------------------- */
-.ap-infobox-wrapper .ap-infobox-design-1 {
-  display: flex;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  flex-wrap: wrap;
-  flex-direction: column;
-  position: relative;
-  padding: 25px 15px;
-  -webkit-transition: all .24s ease-in-out;
-  transition: all .24s ease-in-out;
-  border-color: #2a384c;
-  border-radius: 15px;
-  background-color: #fff;
-  -webkit-box-shadow: 0 1px 10px 0 rgba(55, 94, 246, 0.1);
-  box-shadow: 0 1px 10px 0 rgba(55, 94, 246, 0.1);
-  border-top: 3px solid #1abc9c; }
-  .ap-infobox-wrapper .ap-infobox-design-1 .ap-infobox-details {
+.elementor-widget-ap-infobox.ap-infobox-icon-view-framed .ap-infobox-icon, .elementor-widget-ap-infobox.ap-infobox-icon-view-default .ap-infobox-icon {
+  fill: #1abc9c;
+  color: #1abc9c;
+  border-color: #1abc9c; }
+
+.elementor-widget-ap-infobox.ap-infobox-icon-view-stacked .ap-infobox-icon {
+  background-color: #1abc9c; }
+
+.elementor-widget-ap-infobox.ap-infobox-icon-view-stacked .ap-infobox-icon {
+  padding: .5em;
+  background-color: #1abc9c;
+  color: #fff;
+  fill: #fff; }
+
+.elementor-widget-ap-infobox.ap-infobox-icon-view-classic .ap-infobox-icon {
+  padding: .5em;
+  background-color: #1abc9c;
+  color: #fff;
+  fill: #fff;
+  border-radius: 30% 70% 70% 30% / 30% 30% 70% 70%; }
+
+.ap-infobox-icon-view-framed .ap-infobox-icon {
+  padding: .5em;
+  color: #1abc9c;
+  border: 3px solid #1abc9c;
+  background-color: transparent; }
+
+.ap-infobox-icon-shape-circle .ap-infobox-icon {
+  -webkit-border-radius: 50%;
+  border-radius: 50%; }
+
+.elementor-widget-ap-infobox {
+  background-color: #fff; }
+  .elementor-widget-ap-infobox .ap-infobox {
+    display: flex;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    flex-wrap: wrap;
+    flex-direction: column;
+    position: relative;
+    -webkit-transition: all .24s ease-in-out;
+    transition: all .24s ease-in-out;
     text-align: center; }
-    .ap-infobox-wrapper .ap-infobox-design-1 .ap-infobox-details h4 {
+    .elementor-widget-ap-infobox .ap-infobox h4 {
       font-size: 24px;
       font-weight: 700;
       margin: 0 0  10px;
-      text-transform: capitalize; }
-    .ap-infobox-wrapper .ap-infobox-design-1 .ap-infobox-details p {
-      font-size: 18px;
-      line-height: 26px;
+      text-transform: capitalize;
+      font-family: 'butlerbold', sans-serif; }
+    .elementor-widget-ap-infobox .ap-infobox a {
+      color: #111; }
+    .elementor-widget-ap-infobox .ap-infobox p {
+      font-size: 16px;
+      line-height: 1.5;
       margin: 0;
-      font-weight: 500; }
-    .ap-infobox-wrapper .ap-infobox-design-1 .ap-infobox-details a {
-      font-size: 18px;
-      color: #4a35f1; }
-      .ap-infobox-wrapper .ap-infobox-design-1 .ap-infobox-details a i {
-        font-size: 14px; }
-  .ap-infobox-wrapper .ap-infobox-design-1 .ap-infobox-thumb {
-    margin-bottom: 15px;
-    text-align: center; }
-    .ap-infobox-wrapper .ap-infobox-design-1 .ap-infobox-thumb img {
-      -webkit-animation: pulse 400ms ease-in-out;
-      animation: pulse 400ms ease-in-out; }
-    .ap-infobox-wrapper .ap-infobox-design-1 .ap-infobox-thumb i {
-      -webkit-animation: pulse 400ms ease-in-out;
-      animation: pulse 400ms ease-in-out;
-      font-size: 40px;
-      color: #4a35f1; }
-.ap-infobox-wrapper .ap-infobox-design-1:hover {
-  -webkit-box-shadow: 0 4px 10px 0 rgba(55, 94, 246, 0.4);
-  box-shadow: 0 4px 10px 0 rgba(154, 159, 180, 0.4); }
-.ap-infobox-wrapper .ap-infobox-design-2 {
-  display: flex;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  flex-wrap: wrap;
-  position: relative;
-  overflow: hidden;
-  z-index: 1;
-  padding: 25px 15px;
-  border-radius: 10px;
-  background-color: #ffffff;
-  -webkit-box-shadow: 0 4px 10px 0 rgba(55, 94, 246, 0.4);
-  box-shadow: 0 4px 10px 0 rgba(154, 159, 180, 0.4); }
-  .ap-infobox-wrapper .ap-infobox-design-2 .ap-infobox-details {
-    text-align: left; }
-    .ap-infobox-wrapper .ap-infobox-design-2 .ap-infobox-details h4 {
-      font-size: 24px;
-      font-weight: 700;
-      margin: 0 0  12px;
-      text-transform: capitalize; }
-    .ap-infobox-wrapper .ap-infobox-design-2 .ap-infobox-details p {
-      font-size: 18px;
-      line-height: 26px;
-      margin: 0;
-      font-weight: 500; }
-    .ap-infobox-wrapper .ap-infobox-design-2 .ap-infobox-details a {
-      font-size: 18px;
-      color: #4a35f1; }
-      .ap-infobox-wrapper .ap-infobox-design-2 .ap-infobox-details a i {
-        font-size: 14px; }
-  .ap-infobox-wrapper .ap-infobox-design-2 .ap-infobox-thumb {
-    margin-bottom: 15px;
-    text-align: left; }
-    .ap-infobox-wrapper .ap-infobox-design-2 .ap-infobox-thumb img {
-      -webkit-animation: pulse 400ms ease-in-out;
-      animation: pulse 400ms ease-in-out; }
-    .ap-infobox-wrapper .ap-infobox-design-2 .ap-infobox-thumb i {
-      -webkit-animation: pulse 400ms ease-in-out;
-      animation: pulse 400ms ease-in-out;
-      font-size: 40px;
-      color: #4a35f1; }
-.ap-infobox-wrapper .ap-infobox-design-2:before {
-  content: '';
-  position: absolute;
-  right: -65px;
-  width: 95px;
-  height: 95px;
-  top: -55px;
-  border-radius: 50px;
-  background-color: rgba(232, 5, 102, 0.9);
-  -webkit-transition: all .3s;
-  -o-transition: all .3s;
-  transition: all .3s;
-  z-index: -1; }
-.ap-infobox-wrapper .ap-infobox-design-2:hover:before {
-  content: '';
-  position: absolute;
-  right: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  border-radius: 0;
-  background-color: rgba(232, 5, 102, 0.9); }
-.ap-infobox-wrapper .ap-infobox-design-2:hover .ap-infobox-thumb i {
-  color: #ffffff; }
-.ap-infobox-wrapper .ap-infobox-design-2:hover .ap-infobox-details h4, .ap-infobox-wrapper .ap-infobox-design-2:hover .ap-infobox-details p, .ap-infobox-wrapper .ap-infobox-design-2:hover .ap-infobox-details a {
-  color: #ffffff; }
-.ap-infobox-wrapper .ap-infobox-disable {
-  display: none; }
+      font-weight: 500;
+      font-family: 'Poppins', sans-serif; }
+    .elementor-widget-ap-infobox .ap-infobox .ap-infobox-button {
+      display: inline-block;
+      border-radius: 2px;
+      margin-top: 10px; }
+      .elementor-widget-ap-infobox .ap-infobox .ap-infobox-button .ap-btn-text {
+        font-weight: 500;
+        font-size: 18px;
+        color: #1abc9c; }
+      .elementor-widget-ap-infobox .ap-infobox .ap-infobox-button .ap-btn-icon {
+        margin-left: 5px;
+        font-size: 16px;
+        color: #1abc9c; }
+    .elementor-widget-ap-infobox .ap-infobox .ap-button-xs {
+      padding: 4px 8px;
+      font-size: 12px; }
+    .elementor-widget-ap-infobox .ap-infobox .ap-button-sm {
+      padding: 6px 10px;
+      font-size: 14px; }
+    .elementor-widget-ap-infobox .ap-infobox .ap-button-md {
+      padding: 8px 14px;
+      font-size: 16px; }
+    .elementor-widget-ap-infobox .ap-infobox .ap-button-lg {
+      padding: 10px 16px;
+      font-size: 18px; }
+    .elementor-widget-ap-infobox .ap-infobox .ap-button-xl {
+      padding: 12px 18px;
+      font-size: 24px; }
+    .elementor-widget-ap-infobox .ap-infobox .ap-infobox-thumb {
+      margin-bottom: 10px;
+      text-align: center; }
+      .elementor-widget-ap-infobox .ap-infobox .ap-infobox-thumb img {
+        -webkit-animation: pulse 400ms ease-in-out;
+        animation: pulse 400ms ease-in-out; }
+      .elementor-widget-ap-infobox .ap-infobox .ap-infobox-thumb .ap-infobox-icon {
+        -webkit-animation: pulse 400ms ease-in-out;
+        animation: pulse 400ms ease-in-out;
+        font-size: 40px; }
+    .elementor-widget-ap-infobox .ap-infobox .ap-infobox-design-1 {
+      border-radius: 0.50rem;
+      -webkit-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.18), 0 4px 15px 0 rgba(0, 0, 0, 0.15);
+      box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.18), 0 4px 15px 0 rgba(0, 0, 0, 0.15);
+      border-top: 3px solid #1abc9c;
+      padding: 25px 15px; }
+    .elementor-widget-ap-infobox .ap-infobox .ap-infobox-design-1:hover {
+      -webkit-box-shadow: 0 4px 10px 0 rgba(55, 94, 246, 0.4);
+      box-shadow: 0 4px 10px 0 rgba(154, 159, 180, 0.4); }
+    .elementor-widget-ap-infobox .ap-infobox .ap-infobox-design-2 {
+      display: flex;
+      align-items: center;
+      border-radius: 0.25rem;
+      -webkit-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.18), 0 4px 15px 0 rgba(0, 0, 0, 0.15);
+      box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.18), 0 4px 15px 0 rgba(0, 0, 0, 0.15);
+      padding: 25px 15px;
+      text-align: left;
+      border-bottom: 2px solid #1abc9c; }
+      .elementor-widget-ap-infobox .ap-infobox .ap-infobox-design-2 .ap-infobox-button {
+        padding-left: 0px; }
+    .elementor-widget-ap-infobox .ap-infobox .ap-infobox-design-2 .ap-infobox-icon-wrapper {
+      padding: 0px 20px;
+      text-align: left; }
+    .elementor-widget-ap-infobox .ap-infobox .ap-infobox-design-2:hover {
+      -webkit-box-shadow: 0 4px 10px 0 rgba(55, 94, 246, 0.4);
+      box-shadow: 0 4px 10px 0 rgba(154, 159, 180, 0.4); }
 
 /*# sourceMappingURL=infobox.css.map */
