--- a/assets/css/widgets/testimonial.css
+++ b/assets/css/widgets/testimonial.css
@@ -1,173 +1,131 @@
 /* -------------------------------- */
 /* Addon Pack Testimonial Styles
 /* -------------------------------- */
-.ap-testimonial-wrapper {
-  display: block; }
-  .ap-testimonial-wrapper .ap-testimonial-main-container {
-    background: #ffffff;
-    -moz-box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.1);
-    -webkit-box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.1);
-    box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.1);
-    padding: 15px;
-    position: relative;
-    -moz-transition: all .5s ease-in-out 0s;
-    -webkit-transition: all .5s ease-in-out 0s;
-    -o-transition: all .5s ease-in-out 0s;
-    -ms-transition: all .5s ease-in-out 0s;
-    transition: all .5s ease-in-out 0s;
-    -webkit-transform: scale(1);
-    -o-transform: scale(1);
-    -ms-transform: scale(1);
-    -moz-transform: scale(1);
-    transform: scale(1); }
-  .ap-testimonial-wrapper .ap-testimonial-main-container::after {
-    border-left: 50px solid rgba(0, 0, 0, 0);
-    border-top: 44px solid #1abc9c;
-    content: "";
-    position: absolute;
-    right: 0;
-    top: 0; }
-  .ap-testimonial-wrapper .ap-testimonial-default-style .ap-reviewer-info .ap-testimonial-name {
-    font-size: 20px;
-    font-weight: 600;
-    margin: 15px 0px 5px 0px;
-    color: #1abc9c; }
-  .ap-testimonial-wrapper .ap-testimonial-default-style .ap-reviewer-info .ap-testimonial-designation {
-    margin: 0px; }
-  .ap-testimonial-wrapper .ap-testimonial-default-style .ap-reviewer-info .ap-testimonial-designation .ap-testimonial-company {
-    color: #0073aa; }
-  .ap-testimonial-wrapper .ap-testimonial-default-style .ap-reviewer-content .ap-reviewer-content-details {
-    line-height: 1.7;
-    padding: 0px 0px 12px 0px;
-    margin: 5px 0px;
-    border-bottom: 1px solid #1abc9c;
-    position: relative; }
-    .ap-testimonial-wrapper .ap-testimonial-default-style .ap-reviewer-content .ap-reviewer-content-details .ap-quotation-icon i {
-      color: rgba(0, 0, 0, 0.1);
-      font-size: 20px;
-      padding: 0px 10px; }
-  .ap-testimonial-wrapper .ap-testimonial-default-style .ap-reviewer-content .ap-reviewer-content-details::before {
-    left: 0;
-    bottom: -8px;
-    background: #1abc9c;
-    border: 3px solid #ffffff;
-    -moz-border-radius: 100px;
-    -webkit-border-radius: 100px;
-    border-radius: 100px;
-    content: "";
-    height: 15px;
-    position: absolute;
-    width: 15px; }
-  .ap-testimonial-wrapper .ap-testimonial-default-style .ap-reviewer-rating {
-    display: inline-block;
-    margin: 1px auto;
-    padding: 0;
-    list-style: none; }
-    .ap-testimonial-wrapper .ap-testimonial-default-style .ap-reviewer-rating li {
-      display: inline-block; }
-      .ap-testimonial-wrapper .ap-testimonial-default-style .ap-reviewer-rating li i {
-        color: #ff8800;
+.elementor-widget-addon-pack-testimonial {
+  background: #ffffff; }
+  .elementor-widget-addon-pack-testimonial .ap-testimonial-wrapper {
+    display: block; }
+    .elementor-widget-addon-pack-testimonial .ap-testimonial-wrapper .ap-testimonial {
+      -moz-box-shadow: 2px 4px 8px 1px rgba(0, 0, 0, 0.1);
+      -webkit-box-shadow: 2px 4px 8px 1px rgba(0, 0, 0, 0.1);
+      box-shadow: 2px 4px 8px 1px rgba(0, 0, 0, 0.1);
+      padding: 15px;
+      position: relative;
+      -moz-transition: all .5s ease-in-out 0s;
+      -webkit-transition: all .5s ease-in-out 0s;
+      -o-transition: all .5s ease-in-out 0s;
+      -ms-transition: all .5s ease-in-out 0s;
+      transition: all .5s ease-in-out 0s;
+      -webkit-transform: scale(1);
+      -o-transform: scale(1);
+      -ms-transform: scale(1);
+      -moz-transform: scale(1);
+      transform: scale(1); }
+      .elementor-widget-addon-pack-testimonial .ap-testimonial-wrapper .ap-testimonial .ap-reviewer-info .ap-testimonial-name {
+        font-size: 20px;
+        font-weight: 600;
+        margin: 15px 0px 5px 0px;
+        color: #1abc9c;
+        font-family: 'Poppins', sans-serif; }
+      .elementor-widget-addon-pack-testimonial .ap-testimonial-wrapper .ap-testimonial .ap-reviewer-info .ap-testimonial-designation {
+        margin: 0px; }
+      .elementor-widget-addon-pack-testimonial .ap-testimonial-wrapper .ap-testimonial .ap-reviewer-info .ap-testimonial-designation .ap-testimonial-company {
+        color: #0073aa; }
+      .elementor-widget-addon-pack-testimonial .ap-testimonial-wrapper .ap-testimonial .ap-reviewer-content .ap-reviewer-content-details {
+        line-height: 1.5;
+        margin: 5px 0px;
+        font-family: 'Poppins', sans-serif;
+        position: relative;
         font-size: 16px; }
-  .ap-testimonial-wrapper .ap-testimonial-default-style .ap-reviewer-thumbnail {
-    bottom: -40px;
-    position: absolute;
-    right: 20px;
-    -moz-border-radius: 100%;
-    -webkit-border-radius: 100%;
-    border-radius: 100%; }
-    .ap-testimonial-wrapper .ap-testimonial-default-style .ap-reviewer-thumbnail img {
-      line-height: normal;
-      max-width: 100%;
-      vertical-align: middle;
-      width: 100px;
-      height: 100px;
-      border: solid 3px #fff;
-      padding: 2px;
-      -moz-box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.1);
-      -webkit-box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.1);
-      box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.1); }
-  .ap-testimonial-wrapper .ap-testimonial-default-style .ap-testimonial-image-circle img {
-    -moz-border-radius: 100%;
-    -webkit-border-radius: 100%;
-    border-radius: 100%; }
-  .ap-testimonial-wrapper .ap-testimonial-classic-style .ap-reviewer-info .ap-testimonial-name {
-    font-size: 20px;
-    font-weight: 600;
-    margin: 15px 0px 5px 0px;
-    color: #1abc9c; }
-  .ap-testimonial-wrapper .ap-testimonial-classic-style .ap-reviewer-info .ap-testimonial-designation {
-    margin: 0px; }
-  .ap-testimonial-wrapper .ap-testimonial-classic-style .ap-reviewer-info .ap-testimonial-designation .ap-testimonial-company {
-    color: #0073aa; }
-  .ap-testimonial-wrapper .ap-testimonial-classic-style .ap-reviewer-rating {
-    display: inline-block;
-    margin: 1px auto;
-    padding: 0;
-    list-style: none; }
-    .ap-testimonial-wrapper .ap-testimonial-classic-style .ap-reviewer-rating li {
-      display: inline-block; }
-      .ap-testimonial-wrapper .ap-testimonial-classic-style .ap-reviewer-rating li i {
-        color: #ff8800;
-        font-size: 16px; }
-  .ap-testimonial-wrapper .ap-testimonial-classic-style .ap-reviewer-thumbnail {
-    -moz-border-radius: 100%;
-    -webkit-border-radius: 100%;
-    border-radius: 100%; }
-    .ap-testimonial-wrapper .ap-testimonial-classic-style .ap-reviewer-thumbnail img {
-      line-height: normal;
-      max-width: 100%;
-      vertical-align: middle;
-      width: 100px;
-      height: 100px;
-      border: solid 3px #fff;
-      padding: 2px;
-      -moz-box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.1);
-      -webkit-box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.1);
-      box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.1); }
-  .ap-testimonial-wrapper .ap-testimonial-classic-style .ap-testimonial-image-circle img {
-    -moz-border-radius: 100%;
-    -webkit-border-radius: 100%;
-    border-radius: 100%; }
-  .ap-testimonial-wrapper .ap-testimonial-classic-style .ap-reviewer-thumbnail {
-    -moz-border-radius: 100%;
-    -webkit-border-radius: 100%;
-    border-radius: 100%; }
-    .ap-testimonial-wrapper .ap-testimonial-classic-style .ap-reviewer-thumbnail img {
-      line-height: normal;
-      max-width: 100%;
-      vertical-align: middle;
-      width: 100px;
-      height: 100px;
-      border: solid 3px #fff;
-      padding: 2px;
-      -moz-box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.1);
-      -webkit-box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.1);
-      box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.1); }
-  .ap-testimonial-wrapper .ap-testimonial-classic-style .ap-classic-reviewer-details {
-    display: flex;
-    justify-content: space-around; }
-  .ap-testimonial-wrapper .ap-testimonial-classic-style .ap-reviewer-info .ap-reviewer-content .ap-reviewer-content-details {
-    line-height: 1.7;
-    padding: 7px 0px 0px 0px;
-    margin: 5px 0px;
-    border-top: 1px solid #1abc9c;
-    border-bottom: 0px none;
-    position: relative; }
-    .ap-testimonial-wrapper .ap-testimonial-classic-style .ap-reviewer-info .ap-reviewer-content .ap-reviewer-content-details .ap-quotation-icon i {
-      color: rgba(0, 0, 0, 0.1);
-      font-size: 20px;
-      padding: 0px 10px; }
-  .ap-testimonial-wrapper .ap-testimonial-classic-style .ap-reviewer-info .ap-reviewer-content .ap-reviewer-content-details::before {
-    left: 0;
-    top: -8px;
-    background: #1abc9c;
-    border: 3px solid #ffffff;
-    -moz-border-radius: 100px;
-    -webkit-border-radius: 100px;
-    border-radius: 100px;
-    content: "";
-    height: 15px;
-    position: absolute;
-    width: 15px; }
+        .elementor-widget-addon-pack-testimonial .ap-testimonial-wrapper .ap-testimonial .ap-reviewer-content .ap-reviewer-content-details .ap-quotation-icon i {
+          color: rgba(0, 0, 0, 0.1);
+          font-size: 20px;
+          padding: 0px 10px; }
+      .elementor-widget-addon-pack-testimonial .ap-testimonial-wrapper .ap-testimonial .ap-reviewer-rating {
+        display: inline-block;
+        margin: 1px auto;
+        padding: 0;
+        list-style: none; }
+        .elementor-widget-addon-pack-testimonial .ap-testimonial-wrapper .ap-testimonial .ap-reviewer-rating li {
+          display: inline-block; }
+          .elementor-widget-addon-pack-testimonial .ap-testimonial-wrapper .ap-testimonial .ap-reviewer-rating li i {
+            color: #ff8800;
+            font-size: 16px; }
+      .elementor-widget-addon-pack-testimonial .ap-testimonial-wrapper .ap-testimonial .ap-testimonial-image-circle img {
+        -moz-border-radius: 100%;
+        -webkit-border-radius: 100%;
+        border-radius: 100%; }
+    .elementor-widget-addon-pack-testimonial .ap-testimonial-wrapper .ap-testimonial-default-style .ap-reviewer-content .ap-reviewer-content-details {
+      border-bottom: 1px solid #1abc9c;
+      padding: 0px 0px 15px 0px; }
+    .elementor-widget-addon-pack-testimonial .ap-testimonial-wrapper .ap-testimonial-default-style .ap-reviewer-content .ap-reviewer-content-details::before {
+      left: 0;
+      bottom: -8px;
+      background: #1abc9c;
+      border: 3px solid #ffffff;
+      -moz-border-radius: 100px;
+      -webkit-border-radius: 100px;
+      border-radius: 100px;
+      content: "";
+      height: 15px;
+      position: absolute;
+      width: 15px; }
+    .elementor-widget-addon-pack-testimonial .ap-testimonial-wrapper .ap-testimonial-default-style .ap-reviewer-thumbnail {
+      bottom: -40px;
+      position: absolute;
+      right: 20px;
+      -moz-border-radius: 100%;
+      -webkit-border-radius: 100%;
+      border-radius: 100%; }
+      .elementor-widget-addon-pack-testimonial .ap-testimonial-wrapper .ap-testimonial-default-style .ap-reviewer-thumbnail img {
+        line-height: normal;
+        max-width: 100%;
+        vertical-align: middle;
+        width: 100px;
+        height: 100px;
+        border: solid 3px #fff;
+        padding: 2px;
+        -moz-box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.1);
+        -webkit-box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.1);
+        box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.1); }
+    .elementor-widget-addon-pack-testimonial .ap-testimonial-wrapper .ap-testimonial-classic-style .ap-reviewer-thumbnail {
+      -moz-border-radius: 100%;
+      -webkit-border-radius: 100%;
+      border-radius: 100%; }
+      .elementor-widget-addon-pack-testimonial .ap-testimonial-wrapper .ap-testimonial-classic-style .ap-reviewer-thumbnail img {
+        line-height: normal;
+        max-width: 100%;
+        vertical-align: middle;
+        width: 100px;
+        height: 100px;
+        border: solid 3px #fff;
+        padding: 2px;
+        -moz-box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.1);
+        -webkit-box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.1);
+        box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.1); }
+    .elementor-widget-addon-pack-testimonial .ap-testimonial-wrapper .ap-testimonial-classic-style .ap-classic-reviewer-details {
+      display: flex;
+      justify-content: space-around;
+      margin-bottom: 10px; }
+    .elementor-widget-addon-pack-testimonial .ap-testimonial-wrapper .ap-testimonial-classic-style .ap-reviewer-info .ap-reviewer-content .ap-reviewer-content-details {
+      padding: 20px 0px 0px 0px;
+      border-top: 1px solid #1abc9c;
+      border-bottom: 0px none; }
+      .elementor-widget-addon-pack-testimonial .ap-testimonial-wrapper .ap-testimonial-classic-style .ap-reviewer-info .ap-reviewer-content .ap-reviewer-content-details .ap-quotation-icon i {
+        color: rgba(0, 0, 0, 0.1);
+        font-size: 20px;
+        padding: 0px 10px; }
+    .elementor-widget-addon-pack-testimonial .ap-testimonial-wrapper .ap-testimonial-classic-style .ap-reviewer-info .ap-reviewer-content .ap-reviewer-content-details::before {
+      left: 0;
+      top: -8px;
+      background: #1abc9c;
+      border: 3px solid #ffffff;
+      -moz-border-radius: 100px;
+      -webkit-border-radius: 100px;
+      border-radius: 100px;
+      content: "";
+      height: 15px;
+      position: absolute;
+      width: 15px; }
 
 /*# sourceMappingURL=testimonial.css.map */
