--- a/assets/sass/widgets/call-to-action.scss
+++ b/assets/sass/widgets/call-to-action.scss
@@ -2,30 +2,33 @@
 /* Addon Pack Call To Action Styles
 /*--------------------------------*/
 
-.ap-cta-wrapper{
-    background-color: #353535;
+.elementor-widget-ap-cta{
+  background-color: #353535;
+
+  .ap-cta-wrapper{
     width: 100%;
     height: auto;
     display: block;
     padding: 28px;
     font-size: 16px;
-    color: #4d4d4d;
-    line-height: 27px;
+    line-height: 1.5;
     margin: 0 auto;
 
     .ap-cta-title{
       color: #fff;
       font-size: 36px;
 	    font-weight: 600;
-	    line-height: 36px;
+	    line-height: 1.2;
 	    margin-bottom: 12px;
 	    text-transform: capitalize;
       font-style: normal;
+      font-family: 'Poppins', sans-serif;
     }
 
     .ap-cta-content{
         font-size: 16px;
         color: #fff;
+        font-family: 'Poppins', sans-serif;
     }
 
     .ap-cta-button {
@@ -39,7 +42,7 @@
       background: #f9f9f9;
       font-size: 16px;
       margin-right: 10px;
-      margin-top: 10px;
+      margin-top: 20px;
       z-index: 0;
       overflow: hidden;
   
@@ -78,5 +81,8 @@
       font-size: 24px;
     }
 }
+}
+
+
 
 
