Team Member widget added

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -590,4 +590,98 @@ font-family: 'butlerbold', sans-serif;
   border-top-right-radius: 0.25rem;
   border-bottom-right-radius: 0.25rem; }
 
+/* -------------------------------- */
+/* Addon Pack Team Member Styles
+/* -------------------------------- */
+.elementor-widget-ap-member {
+  background-color: #fff; }
+  .elementor-widget-ap-member .ap-member {
+    text-align: center;
+    transition: all 0.5s ease 0s;
+    display: flex;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    flex-wrap: wrap;
+    flex-direction: column; }
+    .elementor-widget-ap-member .ap-member .ap-image {
+      overflow: hidden;
+      position: relative;
+      transition: .3s ease-out;
+      transition-property: opacity,transform,filter; }
+    .elementor-widget-ap-member .ap-member .ap-image img {
+      width: 100%;
+      height: auto;
+      transform-origin: 0 0;
+      transition: transform .25s, visibility .25s ease-in; }
+    .elementor-widget-ap-member .ap-member .ap-member-image-transition-zoom-in:hover {
+      transform: scale(1.1); }
+    .elementor-widget-ap-member .ap-member .ap-member-image-transition-zoom-out:hover {
+      transform: scale(0.9); }
+    .elementor-widget-ap-member .ap-member .ap-member-content {
+      display: flex;
+      display: -webkit-box;
+      display: -webkit-flex;
+      display: -ms-flexbox;
+      flex-wrap: wrap;
+      flex-direction: column;
+      padding: 0px 20px 20px 20px; }
+      .elementor-widget-ap-member .ap-member .ap-member-content .ap-name {
+        font-weight: 700;
+        color: #1abc9c;
+        text-transform: capitalize;
+        margin-bottom: 7px;
+        margin-top: 5px; }
+      .elementor-widget-ap-member .ap-member .ap-member-content .ap-job-title {
+        font-weight: 600;
+        color: #707070;
+        text-transform: capitalize;
+        margin: 0; }
+      .elementor-widget-ap-member .ap-member .ap-member-content .ap-bio {
+        font-size: 14px;
+        color: #707070;
+        padding-top: 10px; }
+    .elementor-widget-ap-member .ap-member .ap-social li a:not(:last-child) {
+      margin-right: 0px !important; }
+    .elementor-widget-ap-member .ap-member .ap-social li {
+      display: inline-block; }
+    .elementor-widget-ap-member .ap-member .ap-social {
+      width: 100%;
+      padding: 0;
+      margin: 0;
+      list-style: none; }
+    .elementor-widget-ap-member .ap-member .ap-social li a {
+      display: block;
+      margin-right: 10px; }
+    .elementor-widget-ap-member .ap-member .ap-member-design-1 .ap-social {
+      position: absolute;
+      bottom: 45%;
+      left: 0;
+      opacity: 0;
+      z-index: 2;
+      transition: all 0.5s ease 0.3s; }
+    .elementor-widget-ap-member .ap-member .ap-member-design-1 .ap-social li a {
+      font-size: 16px;
+      color: #fff;
+      position: relative;
+      transition: all 0.3s ease 0s;
+      padding: 10px;
+      background-color: #1abc9c;
+      border-radius: 50%;
+      line-height: 0; }
+    .elementor-widget-ap-member .ap-member .ap-member-design-2 .ap-social {
+      padding-top: 10px; }
+    .elementor-widget-ap-member .ap-member .ap-member-design-2 .ap-social li a {
+      font-size: 20px;
+      transition: all 0.3s ease 0s;
+      color: #1abc9c; }
+    .elementor-widget-ap-member .ap-member .ap-member-design-2 .ap-social li a i {
+      color: #1abc9c; }
+  .elementor-widget-ap-member .ap-member:hover .ap-social {
+    opacity: 1; }
+  .elementor-widget-ap-member .ap-member:hover {
+    box-shadow: 0 15px 10px -10px rgba(0, 0, 0, 0.5), 0 1px 5px rgba(0, 0, 0, 0.3); }
+    .elementor-widget-ap-member .ap-member:hover .ap-image img {
+      opacity: 0.7; }
+
 /*# sourceMappingURL=main.css.map */
