--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -43,6 +43,8 @@ font-family: 'butlerbold', sans-serif;
 
 @import "widgets/card";
 
+@import "widgets/member";
+
 @import "widgets/advanced-accordion";
 
 
