--- a/assets/css/widgets/advanced-accordion.css
+++ b/assets/css/widgets/advanced-accordion.css
@@ -1,3 +1,5 @@
-
+/*--------------------------------*/
+/* Addon Pack Advanced Accordion Styles
+/*--------------------------------*/
 
 /*# sourceMappingURL=advanced-accordion.css.map */
