--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -45,6 +45,8 @@ font-family: 'butlerbold', sans-serif;
 
 @import "widgets/member";
 
+@import "widgets/contact-form-7";
+
 @import "widgets/advanced-accordion";
 
 
