Fluent form added.

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -47,6 +47,8 @@ font-family: 'butlerbold', sans-serif;
 
 @import "widgets/contact-form-7";
 
+@import "widgets/fluent-form";
+
 @import "widgets/advanced-accordion";
 
 
