Pricing Table Added.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -757,5 +757,8 @@ font-family: 'butlerbold', sans-serif;
 /*--------------------------------*/
 /* Addon Pack Advanced Accordion Styles
 /*--------------------------------*/
+/* -------------------------------- */
+/* Addon Pack Pricing Table Styles
+/* -------------------------------- */
 
 /*# sourceMappingURL=main.css.map */
